fix: cursors will not break to new-line on firefox (#1419)

--- a/packages/core/src/editor/editor.css
+++ b/packages/core/src/editor/editor.css
@@ -79,6 +79,7 @@ Tippy popups that are appended to document.body directly
 
 /* Give a remote user a caret */
 .collaboration-cursor__caret {
+  display: inline-block;
   border-left: 1px solid #0d0d0d;
   border-right: 1px solid #0d0d0d;
   margin-left: -1px;
